# wmux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.claude/commands/: add-documentation.md
.claude/output/docs/: bonnes-pratiques-fichier-architecture.md
.claude/rules/: changelog.md  ipc-protocol.md  localization.md  notifications.md  persistence.md  rendering.md  rust-architecture.md  terminal-vte.md  testing.md  windows-platform.md
.claude/skills/rust-best-practices/: SKILL.md
.claude/skills/rust-best-practices/rules/: async-bounded-channels.md  async-cancellation-safety.md  async-futurelock.md  async-join-parallel.md  async-no-blocking.md  async-send-bounds.md  compile-feature-flags.md  compile-release-profile.md  concurrency-actor-pattern.md  concurrency-false-sharing.md  concurrency-rayon-granularity.md  concurrency-rayon.md  concurrency-rwlock.md  concurrency-std-mutex.md  error-context.md  error-expect-messages.md  error-no-unit-type.md  error-thiserror-anyhow.md  iterator-avoid-collect.md  iterator-combinators.md  iterator-ownership.md  lifetime-elision-rules.md  lifetime-hrtb.md  lifetime-no-local-refs.md  lifetime-static-bounds.md  lifetime-struct-references.md  memory-arena-allocator.md  memory-reuse-allocations.md  memory-smallvec.md  memory-smart-pointers.md  memory-stack-allocation.md  memory-vec-capacity.md  ownership-accept-slices.md  ownership-avoid-clone.md  ownership-clone-from.md  ownership-cow-conditional.md  ownership-into-string.md  perf-benchmarking.md  perf-cache-alignment.md  perf-inline.md  (+16 more)
.githooks/: pre-commit
docs/: Backlog.md  DISTRIBUTION.md  PRD.md  TEST_PLAN.md  brief-fonctionnel.md  stitch-redesign-prompt.md
docs/architecture/: ARCHITECTURE.md  INDEX.md  component-relations.md  data-architecture.md  dependency-map.md  feature-files.md  glossary.md  system-diagrams.md
docs/architecture/decisions/: 0001-language-rust.md  0002-gpu-rendering-custom-wgpu.md  0003-text-rendering-glyphon.md  0004-pty-backend-portable-pty.md  0005-ipc-named-pipes-jsonrpc.md  0006-browser-webview2.md  0007-windowing-winit.md  0008-async-actor-pattern.md  0009-session-persistence-json.md  0010-config-format-ghostty.md
resources/locales/: en.toml  fr.toml
resources/shell-integration/: wmux.bash  wmux.ps1  wmux.zsh
resources/themes/: catppuccin-mocha.conf  digital-obsidian.conf  dracula.conf  gruvbox-dark.conf  nord.conf  one-dark.conf  stitch-blue.conf  wmux-default.conf
specs/: L0_01-error-types-and-tracing-infrastructure.md  L0_02-domain-model-types.md  L0_03-quad-pipeline-colored-rectangles.md  L1_01-terminal-cell-grid.md  L1_02-vte-parser-integration.md  L1_03-scrollback-ring-buffer.md  L1_04-osc-sequence-handlers.md  L1_05-conpty-shell-spawning.md  L1_06-pty-async-io.md  L1_07-terminal-grid-gpu-rendering.md  L1_08-keyboard-input-pty-dispatch.md  L1_09-mouse-selection-copypaste.md  L1_10-single-pane-terminal-integration.md  L2_01-appstate-actor-multi-pane-architecture.md  L2_02-pane-tree-layout-engine.md  L2_03-focus-routing-keyboard-shortcuts.md  L2_04-multi-pane-gpu-rendering.md  L2_05-draggable-dividers-pane-resize.md  L2_06-surface-tab-system.md  L2_07-workspace-lifecycle.md  L2_08-sidebar-ui-rendering.md  L2_09-named-pipes-server-jsonrpc.md  L2_10-ipc-authentication.md  L2_11-ipc-handler-trait-router.md  L2_12-workspace-surface-ipc-handlers.md  L2_13-input-read-ipc-handlers.md  L2_14-sidebar-metadata-ipc-handlers.md  L2_15-cli-client-foundation.md  L2_16-cli-domain-commands.md  L3_01-session-auto-save.md  L3_02-session-restore.md  L3_03-webview2-com-initialization.md  L3_04-webview2-browser-panel.md  L3_05-browser-navigation-eval-api.md  L3_06-browser-dom-automation.md  L3_07-browser-ipc-handlers.md  L3_08-notification-store-osc-detection.md  L3_09-notification-visual-indicators.md  L3_10-windows-toast-notifications.md  L3_11-ghostty-config-parser.md  (+11 more)
specs/UI-Design/: 01-evaluate.md  02-team-synthesis.md  03-visual-system.md  04-components.md  05-review.md  _app-design-context.md  wmux-full-application-ui-spec.md
wmux-app/: Cargo.toml
wmux-app/src/: main.rs  updater.rs
wmux-browser/: Cargo.toml
wmux-browser/src/: automation.rs  com.rs  error.rs  lib.rs  manager.rs  panel.rs
wmux-browser/src/automation/: dom.rs  inspect.rs  mod.rs  navigation.rs
wmux-browser/src/panel/: attach.rs  delegation.rs  layout.rs  mod.rs
wmux-cli/: Cargo.toml
wmux-cli/src/: client.rs  main.rs  output.rs
wmux-cli/src/commands/: browser.rs  mod.rs  notify.rs  sidebar.rs  ssh.rs  surface.rs  system.rs  workspace.rs
wmux-config/: Cargo.toml
wmux-config/src/: config.rs  error.rs  lib.rs  locale.rs  parser.rs  theme.rs
wmux-config/src/theme/: chrome.rs  mod.rs  registry.rs  types.rs
wmux-core/: Cargo.toml
wmux-core/src/: app_state.rs  cell.rs  color.rs  command_registry.rs  cursor.rs  error.rs  event.rs  git_detector.rs  grid.rs  lib.rs  metadata_store.rs  mode.rs  notification.rs  pane_registry.rs  pane_tree.rs  port_scanner.rs  process_detect.rs  rect.rs  remote.rs  scrollback.rs  selection.rs  session.rs  surface.rs  surface_manager.rs  terminal.rs  types.rs  vte_handler.rs  workspace.rs  workspace_manager.rs
wmux-core/src/app_state/: actor.rs  handle.rs  mod.rs
wmux-ipc/: Cargo.toml
wmux-ipc/src/: auth.rs  error.rs  handler.rs  lib.rs  protocol.rs  router.rs  server.rs
wmux-ipc/src/handlers/: browser.rs  mod.rs  sidebar.rs  surface.rs  system.rs  workspace.rs
wmux-pty/: Cargo.toml
wmux-pty/src/: actor.rs  conpty.rs  error.rs  lib.rs  manager.rs  shell.rs  spawn.rs
wmux-render/: Cargo.toml
wmux-render/src/: error.rs  gpu.rs  icons.rs  lib.rs  pane.rs  quad.rs  shader.wgsl  shadow.rs  shadow.wgsl  svg_icons.rs  terminal.rs  text.rs
wmux-ui/: Cargo.toml
wmux-ui/src/: address_bar.rs  animation.rs  command_palette.rs  divider.rs  effects.rs  error.rs  event.rs  input.rs  lib.rs  mouse.rs  notification_panel.rs  search.rs  shortcuts.rs  sidebar.rs  status_bar.rs  titlebar.rs  toast.rs  typography.rs  window.rs
wmux-ui/src/window/: event_loop.rs  handlers.rs  mod.rs  render.rs
