[workspace]
members = [
    "wmux-core",
    "wmux-pty",
    "wmux-render",
    "wmux-ui",
    "wmux-ipc",
    "wmux-cli",
    "wmux-app",
    "wmux-browser",
    "wmux-config",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# GPU & Rendering
wgpu = "28"
winit = "0.30"
glyphon = "0.10"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Terminal
vte = "0.13"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Domain model
uuid = { version = "1", features = ["v4", "serde"] }
bitflags = "2"
compact_str = { version = "0.9", features = ["serde"] }
unicode-width = "0.2"

# Config & Utilities
thiserror = "2"
dirs = "6"
toml = "1"
arboard = "3"
anyhow = "1"

# Browser
webview2-com = "0.39"
windows = { version = "0.62", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_System_Pipes",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }

# Cryptography
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Auto-update
reqwest = { version = "0.12", features = ["json"] }
semver = "1"

# Search
regex = "1"

# Internal crates
wmux-core = { path = "wmux-core" }
wmux-pty = { path = "wmux-pty" }
wmux-render = { path = "wmux-render" }
wmux-ui = { path = "wmux-ui" }
wmux-ipc = { path = "wmux-ipc" }
wmux-cli = { path = "wmux-cli" }
wmux-browser = { path = "wmux-browser" }
wmux-config = { path = "wmux-config" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
overflow-checks = true
