[package]
name = "wmux-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wmux-app"
path = "src/main.rs"

[dependencies]
wmux-core.workspace = true
wmux-ui.workspace = true
wmux-ipc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dirs.workspace = true
