[package]
name = "wmux-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
webview2-com.workspace = true
windows.workspace = true
dirs.workspace = true
wmux-core.workspace = true
