[package]
name = "wmux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
wmux-core.workspace = true
wmux-ipc.workspace = true

[[bin]]
name = "wmux"
path = "src/main.rs"
