[package]
name = "wmux-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
bitflags.workspace = true
serde.workspace = true
compact_str.workspace = true
vte.workspace = true
unicode-width.workspace = true

[dev-dependencies]
serde_json.workspace = true
