[package]
name = "wmux-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wmux-config.workspace = true
wmux-core.workspace = true
wmux-pty.workspace = true
wmux-render.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
arboard.workspace = true
windows.workspace = true
regex.workspace = true
glyphon.workspace = true
